2006-09-03  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box), (clearlooks_style_draw_tab),
	(clearlooks_style_draw_arrow):

	Arrows are now drawn with the right color and less fuzzy.

2006-09-03  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_scrollbar_stepper),
	(clearlooks_draw_scrollbar_slider):

	Added grip handles to scrollbars.

2006-09-02  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_option), (clearlooks_style_draw_check):

	Increased contrast of disabled radio/checkboxes. Fixes #326309.

2006-08-31  Thomas Wood  <thos@gnome.org>

	* themes/Clearlooks/gtk-2.0/gtkrc: Remove glossy scrollbars (with
	Richard's permission) for use as the GNOME default.

2006-08-27  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (real_draw_box):
	- Fall back to draw_flat_box if shadow is NONE and something
	unkown gets drawn. This fixes inkscape rulers. Also added a
	now needed workaround for panel menubars.
	Fix based on a patch by Josselin Mouette from
	http://bugzilla.ximian.com/show_bug.cgi?id=45579

2006-08-24  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/hc/src/hc-style.c: (hc_draw_check):
	- Fix a // comment

	* engines/industrial/src/industrial_style.c: (draw_option):
	- Add a missing cairo_destroy call
	- Implement a basic inconsistent state

2006-08-23  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c:
		(draw_box): Fix spinbutton background
		(draw_arrow), (draw_extension): Fix combobox arrow sizes
		(draw_tab), (draw_box_gap): Fix inner stroke in notebook tabs

2006-08-23  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_types.h: